@@ -23,6 +23,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -38,6 +39,11 @@ public class SecurityConfig {
             "/auth/google"
     };
 
+    private final String[] PUBLIC_CORS_DOMAIN = {
+            "http://localhost:5173",
+            "https://sport-bike-exchange-fe.vercel.app/"
+    };
+
     @Value("${jwt.signer.key}")
     private String jwtSecret;
 
@@ -51,6 +57,8 @@ public class SecurityConfig {
                         .requestMatchers(HttpMethod.POST, PUBLIC_USER_ENDPOINTS).permitAll()
                         .requestMatchers(HttpMethod.GET, "/post/all", "/post/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/*.html", "/static/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/payments/vnpay-wallet", "/payments/vnpay-payment")
+                        .permitAll()
                         .anyRequest().authenticated());
 
         httpSecurity.oauth2ResourceServer(oauth2 -> oauth2
@@ -64,7 +72,7 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+        configuration.setAllowedOrigins(Arrays.asList(PUBLIC_CORS_DOMAIN));
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
